--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img src="https://i.pinimg.com/originals/74/d1/b3/74d1b3c837ff6cf5e872275905dce4b2.gif" 
              alt="Mignon" class="rounded-2xl mb-8 mx-auto shadow-lg">
 
-        <a href="/Users/User/Documents/Stvalentin/question.html" class="inline-block bg-pink-500 hover:bg-pink-600 text-white text-2xl py-3 px-10 rounded-full transition-transform hover:scale-110 shadow-pink-200 shadow-lg">
+        <a href="/question.html" class="inline-block bg-pink-500 hover:bg-pink-600 text-white text-2xl py-3 px-10 rounded-full transition-transform hover:scale-110 shadow-pink-200 shadow-lg">
             Suivant ⮕
         </a>
     </div>
