--- a/question.html
+++ b/question.html
@@ -15,10 +15,10 @@
              alt="Be mine" class="rounded-2xl mb-10 mx-auto w-64">
 
         <div class="flex justify-center gap-8">
-            <button onclick="location.href='/Users/User/Documents/Stvalentin/finalyes.html'" class="bg-green-400 hover:bg-green-500 text-white text-2xl py-3 px-12 rounded-full shadow-lg transition-transform hover:scale-110">
+            <button onclick="location.href='/finalyes.html'" class="bg-green-400 hover:bg-green-500 text-white text-2xl py-3 px-12 rounded-full shadow-lg transition-transform hover:scale-110">
                 OUI !
             </button>
-            <button onclick="location.href='/Users/User/Documents/Stvalentin/finalno.html'" class="bg-red-400 hover:bg-red-500 text-white text-2xl py-3 px-12 rounded-full shadow-lg">
+            <button onclick="location.href='/finalno.html'" class="bg-red-400 hover:bg-red-500 text-white text-2xl py-3 px-12 rounded-full shadow-lg">
                 Non...
             </button>
         </div>
